--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ body {
     color: #333;
 }
 
+.inicios {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
 #inicio {
   display: flex;
   justify-content: space-between;
