--- a/contacto.css
+++ b/contacto.css
@@ -14,7 +14,7 @@
             font-weight: bold;
         }
         input, textarea, button {
-         padding: 8px;
+        padding: 8px;
         font-size: 14px;
         border: 1px solid #ccc;
         border-radius: 5px;
@@ -31,7 +31,24 @@
             background: #005bb5;
         }
         a {
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-}
+        color: black;
+        text-decoration: none;
+        font-weight: bold;
+        width: 150px;
+        }
+
+        .volver-btn {
+        display: inline-block;
+        margin-top: 20px;
+        padding: 10px 15px;
+        background-color: #003d1f;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+        }
+
+        .volver-btn:hover {
+        background-color: #e65100;
+        }
